# FrozenStars

./: CMakeLists.txt
cmake/: GenerateClangd.cmake
include/concurrency/: concurrency.cppm
include/concurrency/pool/: manager.cppm  manager_impl.cppm  pool.cppm  threadPool.cppm  threadPool_impl.cppm
include/concurrency/pool/coroutine/: coroutine.cppm  coroutineTask.cppm  coroutineTask_void.cppm  coroutine_state.cppm  scheduler.cppm
include/concurrency/pool/coroutine/policy/: policies.cppm  policy.cppm
include/concurrency/queues/: fifo.cppm  queue.cppm  queues.cppm
include/ecs/: ecs.cppm
include/ecs/component/: component.cppm  dependencies.cppm  dynamicStorage.cppm  multiComponent.cppm  signalHup.cppm
include/ecs/entity/: check_template.cppm  entities.cppm  entities_impl.cppm  entity.cppm
include/memory/: memory.cppm
include/memory/allocator/: allocator.cppm  allocators.cppm  allocators_impl.cppm
include/resource/: policy.cppm  registry.cppm  registry_impl.cppm  resource.cppm
include/signals/: signal.cppm  signal_impl.cppm  signals.cppm
tests/: CMakeLists.txt
tests/concurrency/: helper.cppm  test_coroutine.cpp  test_manager.cpp  test_queues.cpp  test_threadPool.cpp
tests/ecs/: helper.cppm  test_dynamicStorage.cpp  test_linear.cpp  test_multiComponent.cpp  test_tuple.cpp  test_virtual.cpp
tests/memory/: helper.cppm  test_bump.cpp  test_memory.cpp  test_pool.cpp  test_stack.cpp
tests/resource/: helper.cppm  test_registry.cpp
tests/signals/: helper.cppm  test_hub.cpp  test_scope.cpp  test_signal.cpp
